--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,21 @@
 {
-    "extends": ["@nuxt/eslint-config"]
-}
+    "root": true,
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "extends": [
+      "eslint:recommended",
+      "plugin:vue/vue3-recommended",
+      "plugin:@typescript-eslint/recommended",
+      "@nuxt/eslint-config"
+    ],
+    "plugins": [
+      "vue",
+      "@typescript-eslint"
+    ],
+    "rules": {
+      // Add your custom rules here
+    }
+  }
+  
