--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,11 @@ jobs:
 # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
           node-version: '20'
-      - name: install
-        run: yarn install
-      - name: ESLint
-        run: yarn run fix .
-      - name: Prettier
-        run: yarn prettier --write .
+      - run: npm install
+      - run: npx eslint . --ext .js,.vue
+
         
